infra/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  client
  namespace: prod
  labels:
    app:  client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  client
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  client
        image:  hadesgod/client
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  3000
          name:  client
      restartPolicy: Always 

---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: prod
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
  - name: client
    protocol: TCP
    port: 80
    targetPort: 3000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 3000
