infra/k8s/event-bus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  event-bus
  namespace: prod
  labels:
    app:  event-bus
spec:
  selector:
    matchLabels:
      app: event-bus
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  event-bus
    spec:
      containers:
      - name:  event-bus
        image:  hadesgod/event-bus
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  4005
          name:  event-bus
      restartPolicy: Always 
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus
  namespace: prod
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
  - name: event-bus
    protocol: TCP
    port: 80
    targetPort: 4005
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 4005
