infra/k8s/moderation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  moderation
  namespace: prod
  labels:
    app:  moderation
spec:
  selector:
    matchLabels:
      app: moderation
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  moderation
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  moderation
        image:  hadesgod/moderation
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  4003
          name:  moderation
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: moderation
  namespace: prod
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
  - name: moderation
    protocol: TCP
    port: 80
    targetPort: 4003
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 4003
