infra/k8s/query-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  query
  namespace: prod
  labels:
    app:  query
spec:
  selector:
    matchLabels:
      app: query
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  query
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  query
        image:  hadesgod/query
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  4002
          name:  query
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: query
  namespace: prod
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
  - name: query
    protocol: TCP
    port: 80
    targetPort: 4002
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 4002
