infra/k8s/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: prod
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - posts.rustaship.cloudns.ph 
  #   - comments.rustaship.cloudns.ph
  #   secretName: tls-secret
  rules:
    - host: posts.rustaship.cloudns.ph 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: posts 
                port:
                  number: 80
    - host: comments.rustaship.cloudns.ph 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comments 
                port:
                  number: 80
    - host: query.rustaship.cloudns.ph 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: query 
                port:
                  number: 80
    - host: app.rustaship.cloudns.ph 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client 
                port:
                  number: 80
